Float bugfix, theme change

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="ink_blue">#013E6E</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="light_yellow">#F8EE99</color>
+    <color name="orange">#FF9800</color>
+    <color name="orange_variant">#FFB547</color>
 </resources>
